# ece365-dsa2

./: .gitignore  README.md
a1/: Makefile  hash.cpp  hash.h  hello.txt  spellcheck.cpp  util.cpp  util.h
a2/: heap.cpp  heap.h  useHeap.cpp
a3/: CMakeLists.txt  Makefile  Makefile-s  graph.cpp  graph.h  graph_driver.cpp  hash.cpp  hash.h  heap.cpp  heap.h  util.h
a4/: a4_v2.cpp  gen_rand.cpp  run_p4_rand.bash
